<resources>
    <string name="app_name">Indoor Positioning System</string>
    <string name="title_activity_map">Map</string>
    <string name="userNameDefault">App Android</string>
    <string name="serverDefault">http://navigator-cloud.appspot.com/track</string>
    <string name="serverFind">http://104.154.240.176:18003/track</string>
    <string name="groupDefault">test1</string>
    <string name="spinnerViewText">¿A quién desea visitar?</string>
    <string name="visitorEditText">Nombres</string>
    <string name="submitButton">Aceptar</string>
    <string name="pubSub">https://testpositionserver-dot-navigator-cloud.appspot.com/get_shortest_path</string>
    <string name="message">Bienvenido, ¿Qué deseas hacer?</string>
    <string name="radioButtonVisitedRoom">Deseo explorar el CTI</string>
    <string name="radioButtonVisitedPerson">Estoy buscando a alguien en particular</string>
    <string name="next">Siguiente ></string>
</resources>
