<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/mobile_location"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:text="@string/app_name"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textColor="@color/customBlackGray"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewRadioButton"
        android:layout_below="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textAllCaps="true"
        android:textColor="@color/customBlackGray"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textViewRadioButton"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/searchingSomeone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonVisitedPerson"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            />

        <RadioButton
            android:id="@+id/explore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:text="@string/radioButtonVisitedRoom" />
    </RadioGroup>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/submitAction"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="20sp"
        android:shadowColor="@color/shadowGray"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp" />


</RelativeLayout>