<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="#ebebeb">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/mobile_location"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:text="@string/app_name"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@color/customBlackGray"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/visitorEditText"
        android:textColorHint="@color/hintColorEditText"
        android:background="@drawable/edit_text"
        android:padding="5dp"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:id="@+id/visitorName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp" />

    <Spinner
        android:id="@+id/prof_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/visitorName"
        android:layout_alignEnd="@+id/visitorName" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitButton"
        android:id="@+id/submit"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="20sp"
        android:shadowColor="@color/shadowGray"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/visitorName"
        android:text="@string/spinnerViewText"
        android:textColor="@color/customBlackGray"
        android:id="@+id/textView"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="55dp"
        android:layout_marginBottom="15dp" />
</RelativeLayout>
